Refactor UI components and enhance styling.
Replaced buttons with arrow icons for better visuals and simplified structure in DurationPicker, TimePicker, and related skins. Enhanced styling and layout consistency across DurationPicker and TimePicker, and introduced additional components in SimpleFilterView demo.